Update and rename flaky.yml to Flaky.yml

--- a/.github/workflows/Flaky.yml
+++ b/.github/workflows/Flaky.yml
@@ -1,3 +1,9 @@
+name: Flaky
+
+on:
+  push:
+  workflow_dispatch:
+  
 jobs:
   build:
 
@@ -16,5 +22,5 @@ jobs:
         run: mvn test-compile -pl . -am
       - name: Run Test without Nondex
         run: mvn test-compile -pl . test -Dtest=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest#testComplexPrimaryKeyOrder,ID,,,
-      - name: Run Test with Nondex: Proving it is Flaky
+      - name: Run Test with Nondex Proving it is Flaky
         run: mvn test-compile -pl . edu.illinois:nondex-maven-plugin:1.1.2:nondex -Dtest=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest#testComplexPrimaryKeyOrder,ID,,,
