--- a/.github/workflows/Flaky.yml
+++ b/.github/workflows/Flaky.yml
@@ -11,13 +11,15 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v1
+        uses: actions/checkout@v2
 
       - name: Set up JDK 1.8
         uses: actions/setup-java@v2
         with:
           java-version: '8'
           distribution: 'adopt'
+      - name: Build project with Maven
+        run: mvn -B package --file pom.xml
       - name: Compile
         run: mvn test-compile -pl . -am
       - name: Run Test without Nondex
