--- a/.github/workflows/Flaky.yml
+++ b/.github/workflows/Flaky.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           java-version: '8'
           distribution: 'adopt'
-          
+      - name: Run the Maven verify phase
+        run: mvn --batch-mode --update-snapshots verify
       - name: Compile
         run: mvn test-compile -pl . -am
       - name: Run Test without Nondex
