--- a/pom.xml
+++ b/pom.xml
@@ -4,13 +4,13 @@
   <groupId>flaky.test</groupId>
   <artifactId>flaky-test</artifactId>
   <version>1</version>
-  
+  <build>
    <plugins>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.19.1</version>
         </plugin>
-  </plugins>
- 
+   </plugins>
+  </build>
 </project>
