--- a/pom.xml
+++ b/pom.xml
@@ -4,5 +4,13 @@
   <groupId>flaky.test</groupId>
   <artifactId>flaky-test</artifactId>
   <version>1</version>
-  
+  <build>
+   <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.12.4</version>
+        </plugin>
+   </plugins>
+  </build>
 </project>
