--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,10 @@
   <groupId>flaky.test</groupId>
   <artifactId>flaky-test</artifactId>
   <version>1</version>
-  <plugin>
+  
           <build>
+            <plugins>
+              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.19.1</version>
