--- a/.github/workflows/Flaky.yml
+++ b/.github/workflows/Flaky.yml
@@ -23,6 +23,6 @@ jobs:
       - name: Compile
         run: mvn test-compile -pl . -am
       - name: Run Test without Nondex
-        run: mvn test-compile -pl . test -Dtest=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest.testComplexPrimaryKeyOrder,ID,,,
+        run: mvn test-compile -pl . test -Dit.test=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest.testComplexPrimaryKeyOrder,ID,,,
       - name: Run Test with Nondex Proving it is Flaky
-        run: mvn test-compile -pl . edu.illinois:nondex-maven-plugin:1.1.2:nondex -Dtest=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest.testComplexPrimaryKeyOrder,ID,,,
+        run: mvn test-compile -pl . edu.illinois:nondex-maven-plugin:1.1.2:nondex -Dit.test=com.google.cloud.teleport.bigtable.CassandraKeyUtilsTest.testComplexPrimaryKeyOrder,ID,,,
