--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   
   <groupId>idoft</groupId>
-  <artifactId>idoft</artifactId>
+  <artifactId>fmlarosa-idoft</artifactId>
   <version>1</version>
   
           <build>
